--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body
     border: 2px solid #cccccc;
     margin: 0px auto 20px auto; 
     padding: 10px 20px 10px 20px;
-    font-size: 16px; 
+    font-size: 16pt; 
     overflow: auto;
 
     -webkit-box-shadow: 0px 20px 20px 10px rgba(0,0,0,0.35);
@@ -78,7 +78,7 @@ body
     padding-bottom: 10px;
     padding-left: 20px;
     margin: 0px; */
-    font-size: 32px;
+    font-size: 32pt;
     font-weight: lighter;
     text-align: left;
 }
@@ -86,9 +86,10 @@ body
 .main h2
 {
     font-family: 'Raleway', sans-serif;
+    margin: 1em auto auto auto;
     /* padding: 0px;
     margin: 0px; */
-    font-size: 24px;
+    font-size: 18pt;
     font-weight: normal;
     text-align: left;
 }
@@ -109,7 +110,7 @@ body
     border: 2px solid #cccccc;
     margin: 0px auto 20px auto; 
     padding: 10px 20px 10px 20px; */
-    font-size: 16px; 
+    font-size: 12pt; 
     overflow: auto;
 }
 
@@ -124,7 +125,7 @@ body
 
 .intro
 {
-    font-size: 18px;
+    font-size: 14pt;
 }
 
 /* .content a
