--- a/style.css
+++ b/style.css
@@ -27,12 +27,15 @@ body
 {
     /* font-size: 52px; */
     text-align: center;
-    width: 100%;
+    width: 900px;
+    max-width: 100%; 
     /* margin: 20px; */
-    padding: 0px;
-    margin: 0px;
+    padding: 0px 18px 0px 18px;
+    margin: 0px auto 0px auto;
     background-color: #FFFFFF;
     border-bottom: 6px double #606060;
+    border-left: 2px solid #606060;
+    border-right: 2px solid #606060;
     -webkit-box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.15);
     -moz-box-shadow:0px 0px 20px 5px rgba(0,0,0,0.15);
     box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.15);
