--- a/style.css
+++ b/style.css
@@ -15,34 +15,16 @@ a:hover
 body
 {
     background-color:#D8D8D8;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #000000;
     margin: 0px;
     padding: 0px;
     max-width: 100%;
     font-weight: normal;
+    background-color: #eee;
 }
 
-/* Header */
-.header
-{
-    /* font-size: 52px; */
-    text-align: center;
-    width: 900px;
-    max-width: 100%;
-    /* margin: 20px; */
-    padding: 0px 18px 0px 18px;
-    margin: 0px auto 0px auto;
-    background-color: #FFFFFF;
-    border-bottom: 6px double #606060;
-    border-left: 2px solid #909090;
-    border-right: 2px solid #909090;
-    -webkit-box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.15);
-    -moz-box-shadow:0px 0px 20px 5px rgba(0,0,0,0.15);
-    box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.15);
-}
-
-.header h1
+h1
 {
     font-family: 'Raleway', sans-serif;
     font-size: 36px;
@@ -51,6 +33,46 @@ body
     text-align: center;
 }
 
+/* Break up into pages/sections. Style taken from
+https://github.com/delight-im/HTML-Sheets-of-Paper */
+.page {
+  /* Styles for better appearance on screens only -- are reset to defaults in print styles later */
+
+  /* Divide single pages with some space and center all pages horizontally */
+  /*margin: 10em auto; */
+  /* Define a white paper background that sticks out from the darker overall background */
+  background: #fff;
+  /* Show a drop shadow beneath each page */
+  box-shadow: 0 4px 5px rgba(75, 75, 75, 0.2);
+
+  /* More specific settings. */
+  text-align: left;
+  width: 900px;
+  max-width: 100%;
+  margin: 1em auto 1em auto;
+  padding: 1em 2em 1em 2em;
+}
+
+.intro {
+  display:block;
+}
+
+.intro:after {
+  content:"";
+  display:block;
+  clear:both;
+}
+
+.portrait {
+  float: left;
+  width: 20%;
+}
+
+.intro_text {
+  width: 80%;
+  float: right;
+  font-size: 14pt;
+}
 
 /* Main - Everything after the header. */
 .main
@@ -126,13 +148,6 @@ body
     width: 100%;
     background: #AAA;
 }
-
-
-.intro
-{
-    font-size: 14pt;
-}
-
 /* .content a
 {
     color: #ccffff;
