--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ a:hover
     color: #00ccff;
 }
 
+b
+{
+  font-weight: 600;
+}
+
 body
 {
     background-color:#D8D8D8;
@@ -26,7 +31,8 @@ body
 
 h1
 {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
     font-size: 2em;
     padding: 0.2em;
     margin: 0em;
@@ -35,7 +41,8 @@ h1
 
 h2
 {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
     font-size: 1.5em;
     padding: 0.2em;
     margin: 0em;
@@ -92,62 +99,6 @@ https://github.com/delight-im/HTML-Sheets-of-Paper */
   margin-left: 5%;
 }
 
-/* Main - Everything after the header. */
-.main
-{
-    /*margin: 0px auto 20px auto; */
-    /*padding: 20px;*/
-    text-align: left;
-    width: 900px;
-    max-width: 100%;
-
-    background-color: #FFFFFF;
-    border: 2px solid #cccccc;
-    margin: 0px auto 20px auto;
-    padding: 10px 20px 10px 20px;
-    font-size: 16pt;
-    overflow: auto;
-
-    -webkit-box-shadow: 0px 10px 20px 5px rgba(0,0,0,0.15);
-    -moz-box-shadow:0px 10px 20px 5px rgba(0,0,0,0.15);
-    box-shadow: 0px 10px 20px 5px rgba(0,0,0,0.15);
-
-    z-index: -10;
-}
-
-.main h1
-{
-    font-family: 'Raleway', sans-serif;
-    /*padding: 0px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    margin: 0px; */
-    font-size: 32pt;
-    font-weight: lighter;
-    text-align: center;
-    margin: 0.2em auto 0.2em auto;
-}
-
-.main h2
-{
-    font-family: 'Raleway', sans-serif;
-    margin: auto;
-    /* padding: 0px;
-    margin: 0px; */
-    font-size: 18pt;
-    font-weight: normal;
-    text-align: center;
-}
-
-.main img
-{
-    /* border: 2px solid #000000; */
-    /*float: left; */
-    /* display: block; */
-    margin-right: 20px;
-
-}
-
 /* Content - Everything in the now white box. */
 .content
 {
@@ -166,17 +117,6 @@ https://github.com/delight-im/HTML-Sheets-of-Paper */
     width: 100%;
     background: #AAA;
 }
-/* .content a
-{
-    color: #ccffff;
-}
-
-.content a:hover
-{
-    text-decoration: none;
-    color: #00ccff
-} */
-
 .content p
 {
     margin-top: 0px;
