--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ https://github.com/delight-im/HTML-Sheets-of-Paper */
 .intro {
   display: table;
   width: 100%;
+  max-width: 100%;
   font-size: 1em;
 }
 
@@ -85,10 +86,16 @@ https://github.com/delight-im/HTML-Sheets-of-Paper */
   vertical-align: top;
   margin-right: 2em;
   padding: 1em 2em 1em 0em;
+  max-width: 50%;
+  width: 300px;
+  overflow: hidden;
 }
 
 .portrait img {
-  float: left;
+  /*float: left; */
+  width: auto;
+  max-width: 100%;
+  overflow: hidden;
 }
 
 .intro_text {
